--- a/funny.css
+++ b/funny.css
@@ -27,6 +27,13 @@ h2{
     color: #040054;
 }
 
+h3{
+    font-size: 30px;
+    font-weight: 300;
+    text-align: center;
+    color: #040054;
+}
+
 main{
     text-align: center;
 }
